--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,26 +4,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.5",
     "axios": "^0.21.1",
-    "dompurify": "^2.2.7",
+    "dompurify": "^2.2.8",
     "js-cookie": "^2.2.1",
-    "react": "^16.14.0",
-    "react-color": "^2.18.1",
-    "react-cookie-consent": "^6.2.1",
-    "react-dom": "^16.14.0",
-    "react-multi-carousel": "^2.6.1",
-    "react-paginate": "^6.5.0",
-    "react-redux": "^7.2.2",
+    "react": "^17.0.2",
+    "react-color": "^2.19.3",
+    "react-cookie-consent": "^6.2.3",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-multi-carousel": "^2.6.2",
+    "react-paginate": "^7.1.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
-    "react-scripts": "^4.0.1",
-    "react-tooltip": "^4.2.7",
-    "redux": "^4.0.5",
+    "react-scripts": "^4.0.3",
+    "react-tooltip": "^4.2.18",
+    "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "use-image": "^1.0.6"
+    "use-image": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +50,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0"
