--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,26 +4,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.1",
-    "dompurify": "^2.2.8",
+    "dompurify": "^2.3.0",
     "js-cookie": "^2.2.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-cookie-consent": "^6.2.3",
+    "react-cookie-consent": "^6.2.4",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.6.3",
-    "react-paginate": "^7.1.2",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-router-sitemap": "^1.2.0",
     "react-scripts": "^4.0.3",
-    "react-tooltip": "^4.2.19",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "suneditor": "^2.41.3",
+    "suneditor-react": "^3.2.0",
     "use-image": "^1.0.7"
   },
   "scripts": {
